--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test:client": "jest --env=jsdom ./client/components",
-    "cypress:open": "cypress open"
+    "test:e2e": "cypress run"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,15 +27,11 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.3.4",
     "mongoose-unique-validator": "^4.0.0",
-    "axios": "^1.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3",
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.3",
@@ -43,7 +40,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "cypress": "^13.3.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^13.14.1",
     "eslint": "^8.45.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-jest": "^27.2.3",
@@ -52,6 +50,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
     "vite": "^4.4.5"
   }
 }
