change workflow job name

--- a/.github/workflows/CICD-pipeline.yml
+++ b/.github/workflows/CICD-pipeline.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  CI/CD-pipeline:
+  CICD-pipeline:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
