--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "start:test": "cross-env NODE_ENV=test node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test:server": "cross-env NODE_ENV=test jest --verbose --runInBand --env=node ./tests",
+    "test:server": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --env=node ./tests",
     "dev:client": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
