--- a/.github/workflows/CICD-pipeline.yml
+++ b/.github/workflows/CICD-pipeline.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   CICD-pipeline:
     runs-on: ubuntu-20.04
+    env:
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+      PORT: ${{ secrets.PORT }}
+      VITE_PORT: ${{ secrets.VITE_PORT }}
+      SECRET: ${{ secrets.SECRET }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
