--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:server": "cross-env NODE_ENV=test jest --verbose --runInBand --env=node ./tests",
     "dev:client": "vite --host",
     "build": "vite build",
+    "build:dev": "vite build --mode development",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test:client": "jest --env=jsdom ./client/components",
