add notifications and healthcheck

--- a/.github/workflows/CICD-pipeline.yml
+++ b/.github/workflows/CICD-pipeline.yml
@@ -43,6 +43,21 @@ jobs:
       - name: Trigger deployment
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message),'#skip') }}
         run: curl https://api.render.com/deploy/srv-${{secrets.RENDER_SERVICE_ID}}?key=${{secrets.RENDER_API_KEY}}
+      - name: New version notification
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ github.event_name == 'push' && success() && !contains(join(github.event.commits.*.message),'#skip') }}
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: A new version of BlogApp deployed
+          description: ${{ github.event.head_commit.message }}
+          url: https://fullstackopen-part11-20.onrender.com
+      - name: Build error notification
+        uses: sarisia/actions-status-discord@v1
+        if: ${{ github.event_name == 'push' && failure() && !contains(join(github.event.commits.*.message),'#skip') }}
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: BlogApp failed to build
+          description: ${{ join(github.event.commits.*.message, '\n') }}
 
   tag_release:
     needs: [CICD-pipeline]
